// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with pageTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 700;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  font-size: 13px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:last-of-type {
  color: #1C2D38;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover:not(:last-of-type),
.emotion-1:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-2 {
  position: relative;
}

.emotion-2::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-2::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-2::after {
  background-color: #E8EDEB;
}

.emotion-3 {
  cursor: default;
}

.emotion-3:last-of-type {
  color: #1C2D38;
}

.emotion-5 {
  font-size: 13px;
}

.emotion-5:last-of-type {
  color: #1C2D38;
}

.emotion-5:hover,
.emotion-5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover:not(:last-of-type),
.emotion-5:focus:not(:last-of-type) {
  color: #1C2D38;
}

<p
    class="emotion-0"
  >
    <a
      class="constant-classname emotion-1"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-2"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-3 emotion-4"
    >
       → 
    </span>
    <a
      class="emotion-5"
      href="/view-analyze/"
    >
      View & Analyze Data
    </a>
  </p>
</DocumentFragment>
`;

exports[`renders correctly with siteTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
}

.emotion-0 strong,
.emotion-0 b {
  font-weight: 700;
}

.emotion-0 a {
  color: #5C6C75;
}

.emotion-1 {
  font-size: 13px;
  line-height: 20px;
  font-family: 'Euclid Circular A',Akzidenz,'Helvetica Neue',Helvetica,Arial,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  line-height: 13px;
  color: #016BF8;
  font-weight: 400;
  font-size: 13px;
}

.emotion-1:focus {
  outline: none;
}

.emotion-1:last-of-type {
  color: #1C2D38;
}

.emotion-1:hover,
.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover:not(:last-of-type),
.emotion-1:focus:not(:last-of-type) {
  color: #1C2D38;
}

.emotion-2 {
  position: relative;
}

.emotion-2::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -4px;
  left: 0;
  border-radius: 2px;
}

.constant-classname:focus .emotion-2::after {
  background-color: #0498EC;
}

.constant-classname:hover .emotion-2::after {
  background-color: #E8EDEB;
}

.emotion-3 {
  cursor: default;
}

.emotion-3:last-of-type {
  color: #1C2D38;
}

.emotion-5 {
  font-size: 13px;
}

.emotion-5:last-of-type {
  color: #1C2D38;
}

.emotion-5:hover,
.emotion-5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover:not(:last-of-type),
.emotion-5:focus:not(:last-of-type) {
  color: #1C2D38;
}

<p
    class="emotion-0"
  >
    <a
      class="constant-classname emotion-1"
      href="https://www.mongodb.com/docs/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span
        class="emotion-2"
      >
        Docs Home
      </span>
    </a>
    <span
      class="emotion-3 emotion-4"
    >
       → 
    </span>
    <a
      class="emotion-5"
      href="/"
    >
      MongoDB Compass
    </a>
  </p>
</DocumentFragment>
`;
